# hello-blend2d

./: .gitignore  README.md  build.py  pyproject.toml
app/: CMakeLists.txt  app.cpp
